[gd_scene load_steps=6 format=2]

[ext_resource path="res://_OLDnodes/ui.gd" type="Script" id=1]
[ext_resource path="res://Sprites/mockupGUI.png" type="Texture" id=2]
[ext_resource path="res://Sprites/wheel.png" type="Texture" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://ControlNodes/ExampleTheme.tres" type="Theme" id=5]

[node name="ui" type="Control"]
margin_left = 8.0
margin_top = 8.0
margin_right = 275.0
margin_bottom = 156.0
theme = ExtResource( 5 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MockupGUI" type="TextureRect" parent="."]
visible = false
margin_left = 27.1953
margin_top = -5.52441
margin_right = 1838.2
margin_bottom = 1158.48
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wheel" type="TextureRect" parent="."]
visible = false
anchor_left = 0.0991942
anchor_top = 0.146
anchor_right = 1.87119
anchor_bottom = 3.249
margin_left = -24.0964
margin_top = 765.591
margin_right = -247.22
margin_bottom = 556.348
rect_pivot_offset = Vector2( 125, 125 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wheel2" type="TextureRect" parent="Wheel"]
anchor_left = 0.0991942
anchor_top = 0.146
anchor_right = 1.87119
anchor_bottom = 3.249
margin_left = 87.5397
margin_top = -15.1527
margin_right = -332.46
margin_bottom = -768.903
rect_pivot_offset = Vector2( 125, 125 )
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelWind" type="Label" parent="."]
margin_left = 1.0
margin_top = 7.33258
margin_right = 122.0
margin_bottom = 29.3326
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Wind Speed
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wind_speed" type="HSlider" parent="."]
anchor_right = 1.0
margin_left = 1.0
margin_top = 31.3326
margin_right = 1.0
margin_bottom = 47.3326
min_value = 0.4
max_value = 1.3
step = 0.01
value = 0.7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelTime" type="Label" parent="."]
margin_left = 1.0
margin_top = 47.3326
margin_right = 122.0
margin_bottom = 70.3326
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Time of Day"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="HSlider" parent="."]
anchor_right = 1.0
margin_left = 1.0
margin_top = 71.3326
margin_right = 1.0
margin_bottom = 87.3326
max_value = 1000.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapons" type="Label" parent="."]
anchor_top = -1.031e-07
anchor_bottom = -1.031e-07
margin_top = 112.0
margin_right = 121.0
margin_bottom = 135.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Weapons"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponsSlider" type="HSlider" parent="Weapons"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 24.0
margin_right = 117.0
margin_bottom = 40.0
max_value = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Navigation" type="Label" parent="."]
margin_top = 208.0
margin_right = 121.0
margin_bottom = 257.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Navigation
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NavigationSlider" type="HSlider" parent="Navigation"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 24.0
margin_right = 117.0
margin_bottom = 40.0
max_value = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Utility" type="Label" parent="."]
margin_top = 160.0
margin_right = 121.0
margin_bottom = 183.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Utility"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UtilitySlider" type="HSlider" parent="Utility"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 24.0
margin_right = 117.0
margin_bottom = 40.0
max_value = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelAI" type="Label" parent="."]
visible = false
margin_left = 2.55518
margin_top = 86.9872
margin_right = 123.555
margin_bottom = 108.987
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "AI On"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckBox" parent="LabelAI"]
margin_left = 44.7171
margin_top = -12.681
margin_right = 120.717
margin_bottom = 27.319
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="water_style" type="HSlider" parent="."]
visible = false
anchor_right = 1.0
margin_top = 59.7239
margin_bottom = 75.7239
max_value = 8.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labelx" type="Label" parent="."]
visible = false
margin_top = 84.751
margin_right = 121.0
margin_bottom = 106.751
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "SUBSURFACE SCATTERING"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="subsurface_scattering" type="HSlider" parent="."]
visible = false
anchor_right = 1.0
margin_top = 103.521
margin_bottom = 119.521
max_value = 10.0
step = 0.01
value = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="wind_speed" to="." method="_on_wind_speed_value_changed"]
[connection signal="value_changed" from="Time" to="." method="_on_sun_glare_value_changed"]
[connection signal="value_changed" from="Weapons/WeaponsSlider" to="." method="_on_WeaponSlider_value_changed"]
[connection signal="value_changed" from="Navigation/NavigationSlider" to="." method="_on_NavSlider_value_changed"]
[connection signal="value_changed" from="Utility/UtilitySlider" to="." method="_on_UtilsSlider_value_changed"]
[connection signal="toggled" from="LabelAI/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="value_changed" from="water_style" to="." method="_on_water_style_value_changed"]
[connection signal="value_changed" from="subsurface_scattering" to="." method="_on_subsurface_scattering_value_changed"]
